[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rns-icn"
version = "0.1.0"
description = "Information-Centric Networking for reticulum-py"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rns_icn*"]

[project.scripts]
icn-client = "rns_icn.cli:client_main_sync"
icn-server = "rns_icn.cli:server_main_sync"
icn-publish = "rns_icn.cli_publish:main"
icn-fetch = "rns_icn.cli_fetch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
