[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rns-icn"
version = "0.1.0"
description = "Information-Centric Networking for reticulum-py"
requires-python = ">=3.10"
dependencies = [
    "rns>=1.2",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rns_icn*"]

[project.scripts]
icn-client = "rns_icn.cli:client_main_sync"
icn-server = "rns_icn.cli:server_main_sync"
icn-router = "rns_icn.cli:router_main_sync"
icn-publish = "rns_icn.cli_publish:main"
icn-fetch = "rns_icn.cli_fetch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
# scripts/dev holds archived throwaway dev scripts — not linted.
extend-exclude = ["scripts/dev"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line length): not worth reflowing the existing tree.
# E741 (ambiguous name `l`): tolerated in test comprehensions.
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.10"
# RNS and other deps ship without type stubs; don't fail on missing imports.
ignore_missing_imports = true
# The tree is type-clean and mypy is enforced in CI, but it isn't fully
# annotated yet — keep these relaxed until function bodies are all typed.
warn_unused_ignores = false
warn_return_any = false
