[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rns-icn"
version = "0.2.0"
description = "Information-Centric Networking for reticulum-py"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "rns>=1.2",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rns_icn*"]

[project.scripts]
icn-client = "rns_icn.cli:client_main_sync"
icn-server = "rns_icn.cli:server_main_sync"
icn-router = "rns_icn.cli:router_main_sync"
icn-publish = "rns_icn.cli_publish:main"
icn-fetch = "rns_icn.cli_fetch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["rns_icn"]
branch = true

[tool.coverage.report]
show_missing = true
# Floor sits a safe margin under the measured ~74% (branch coverage on) so it
# locks in a baseline without being flaky. Raise as coverage improves.
fail_under = 70
# Integration-only and trivial unreachable lines are excluded from the count.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F/I: pycodestyle errors, pyflakes, isort. B: bugbear (real bug patterns).
# ASYNC: async pitfalls. C4: comprehensions. SIM: simplifications. PT: pytest
# style. UP: pyupgrade. RUF: ruff-specific.
select = ["E", "F", "I", "B", "ASYNC", "C4", "SIM", "PT", "UP", "RUF"]
ignore = [
    "E501",        # line length: not worth reflowing the existing tree
    "E741",        # ambiguous name `l`: tolerated in test comprehensions
    "SIM105",      # try/except/pass is clearer than contextlib.suppress here
    "ASYNC230",    # blocking file I/O: project is asyncio (these assume trio/anyio)
    "ASYNC240",    # pathlib in async: ditto — trivial path ops, not real I/O
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over lint purity: tolerate multi-assert blocks,
# broad pytest.raises, zip without strict, and fire-and-forget tasks under the
# test's own control.
"tests/**" = ["B905", "B007", "B017", "PT011", "PT018", "RUF005", "RUF006",
              "RUF015", "RUF059", "SIM102", "SIM103", "SIM110", "SIM118",
              "C401", "ASYNC110"]

[tool.mypy]
python_version = "3.10"
# RNS and other deps ship without type stubs; don't fail on missing imports.
ignore_missing_imports = true
# The tree is type-clean and mypy is enforced in CI, but it isn't fully
# annotated yet — keep these relaxed until function bodies are all typed.
warn_unused_ignores = false
warn_return_any = false
